--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   provider: ^6.1.2
   google_fonts: ^6.2.1
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
